# SOS

./: README.md
projects/aos/: .gitignore  CMakeLists.txt
projects/aos/apps/ben/: CMakeLists.txt
projects/aos/apps/ben/src/: ben.c  benchmark.c  benchmark.h
projects/aos/apps/muo_gui_ce_shi/: CMakeLists.txt
projects/aos/apps/muo_gui_ce_shi/src/: muo_gui_ce_shi.c
projects/aos/apps/sosh/src/: sosh.c
projects/aos/apps/test_app/: CMakeLists.txt
projects/aos/apps/test_app/src/: test_app.c
projects/aos/apps/tty_test/src/: tty_test.c  ttyout.c
projects/aos/libadt/: CMakeLists.txt
projects/aos/libadt/include/adt/: circular_id.h  id.h  list.h  priority_queue.h  queue.h
projects/aos/libadt/src/: adt.c  circular_id.c  id.c  linkedlist.c  list.c  priority_queue.c  queue.c
projects/aos/libclock/: CMakeLists.txt
projects/aos/libclock/src/: clock.c
projects/aos/libpicoro/: CMakeLists.txt
projects/aos/libpicoro/include/picoro/: picoro.h
projects/aos/libpicoro/src/: picoro.c
projects/aos/libsosapi/include/: sos.h
projects/aos/libsosapi/src/: sos.c  sys_morecore.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: addrspace.c  addrspace.h  elf.c  elfload.h  frame_table.c  frame_table.h  globals.c  globals.h  io_mapping.c  io_mapping.h  main.c  mapping.c  network.c  pagefile.c  pagefile.h  pagetable.c  pagetable.h  paging.c  paging.h  picoro.c  proc.c  proc.h  process.c  process.h  syscall.c  syscall.h  uio.c  uio.h  vframe_table.c  vframe_table.h  vfs.c  vfs.h  vft.c  vft.h  vmem_layout.h
projects/aos/sos/src/drivers/: serial.c  serial.h
projects/aos/sos/src/fs/: fd_table.c  fd_table.h  fs_types.h  serial.c  (+7 more)
(+19 files in other folders)
